# z_slime

./: Cargo.toml  README.md
src/: agent.rs  main.rs
