[package]
name = "z_slime"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
error-iter = "0.4.1"
game-loop = {version = "0.10.2", features = ["winit"]}
log = "0.4.19"
pixels = "0.13.0"
rand = "0.8.5"
winit = "0.28.6"
winit_input_helper = "0.14.1"
